<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TGSFW</string>

    <string name="msg_app_exit">\'Back\' 버튼을 한번 더 누르면 앱을 종료합니다.</string>

    <string name="login_id_title">아이디</string>
    <string name="login_pw_title">비밀번호</string>
    <string name="login_check_save">로그인 상태 유지</string>
    <string name="login_button">로그인</string>
    <string name="login_find_id">아이디 찾기</string>
    <string name="login_find_pw">비밀번호 찾기</string>
    <string name="login_msg_input_id">아이디를 입력해주세요.</string>
    <string name="login_msg_input_pw">비밀번호를 입력해주세요.</string>


    <string name="biometric_title">지문인식</string>
    <string name="biometric_dialog_unavailable_title">지문 인증 사용 불가</string>
    <string name="biometric_dialog_unavailable_msg">기기에서 생체 인증을 지원하지 않거나 생체 인증을 사용할 수 없습니다.</string>
    <string name="biometric_dialog_fail_msg">생체 인증 설정에 실패하였습니다.</string>
    <string name="biometric_dialog_register_title">지문 등록</string>
    <string name="biometric_dialog_register_msg">등록된 지문이 없습니다.\n지문등록 설정화면으로 이동하시겠습니까?</string>
    <string name="biometric_dialog_not_register_msg">지문 등록을 완료하지 못했습니다.</string>



    <string name="home_fragment_title">홈</string>
    <string name="side_menu_not_using">사이드메뉴 사용 설정 후 이용할 수 있습니다.</string>

    <string name="notice_fragment_title">게시판</string>

    <string name="id_card_fragment_title">모바일 신분증</string>

    <string name="setting_fragment_title">설정</string>
    <string name="setting_fragment_push_title">푸시 알림 수신</string>
    <string name="setting_fragment_push_time">수신 거부 일시 : %s</string>
    <string name="setting_fragment_save_account_title">로그인 정보 자동 저장</string>
    <string name="setting_fragment_logout">계정 로그아웃</string>
    <string name="setting_fragment_logout_msg">로그아웃 하시겠습니까?</string>

    <string name="push_service_not_using">푸시 알림 사용 설정 후 이용할 수 있습니다.</string>
    <string name="push_message_title">알람함</string>

    <string name="qr_scan_title">QR스캔</string>
    <string name="qr_scan_message_01">입장을 위한 QR 스캔</string>
    <string name="qr_scan_message_02">입장하는 건물의 QR코드를 인식하세요.</string>

    <string name="otp_dialog_title">OTP 인증 번호</string>
    <string name="otp_dialog_msg_guide">OTP 인증번호 4자리를 입력해주세요</string>
    <string name="otp_dialog_limit_time">유효시간 : &lt;font color=\"#ff805e\"&gt;%d&lt;/font&gt;초</string>

    <string name="picture_upload_dialog_title">사진 업로드</string>
    <string name="picture_upload_dialog_guide">현장사진을 선택 해주세요.</string>
    <string name="picture_upload_dialog_loc_title">현재 내 위치 공유</string>
    <string name="picture_upload_dialog_loc_guide">위치를 공유를 하지 않을 경우 현장 방문이 미완료 될 수 있습니다.</string>


    <string name="dialog_button_ok">확인</string>
    <string name="dialog_button_cancel">취소</string>
    <string name="dialog_button_upload">확인</string>
    <string name="dialog_button_yes">네</string>
    <string name="dialog_button_no">아니오</string>


    <string name="nav_header_title">님 환영합니다.</string>
    <!--
      <string name="upload_sub_title">데이터셋 이미지</string>
      <string name="upload_button_camera">카메라</string>
      <string name="upload_button_gallery">갤러리</string>
      <string name="upload_button_upload">업로드</string>
      <string name="upload_empty">사진촬영 또는 갤러리를 선택하여\n이미지를 업로드 해 주세요.</string>
      <string name="dialog_message_upload_success">데이터셋 이미지 업로드를 완료하였습니다.</string>
      <string name="dialog_message_upload_fail">데이터셋 이미지 업로드를 실패하였습니다.</string>
      <string name="upload_not_wifi">Wi-Fi가 연결되어 있지 않습니다.\n\n모바일 데이터를 이용하여\n업로드를 계속 할 경우 \n데이터 이용 요급이 부과 될 수 있습니다. \n\n계속하시겠습니까?</string>


      <string name="upload_state_text_1">대기</string>
      <string name="upload_state_text_2">완료</string>
      <string name="upload_state_text_3">반려</string>

      <string name="upload_result_filter_1">전체</string>
      <string name="upload_result_filter_2">대기</string>
      <string name="upload_result_filter_3">완료</string>
      <string name="upload_result_filter_4">반려</string>

      <string name="upload_result_toggle_del_1">삭제</string>
      <string name="upload_result_toggle_del_2">전체선택</string>
      <string name="upload_result_del_cancel">취소하기</string>
      <string name="upload_result_del_ok">삭제하기</string>


      <string name="upload_result_get_message_success">업로드 대기 목록 조회를 성공 하였습니다.</string>
      <string name="upload_result_get_message_fail">업로드 대기 목록 조회를 실패하였습니다.</string>
      <string name="upload_result_del_item_empty">선택 된 항목이 없습니다.</string>
      <string name="upload_result_del_message_success">업로드 대기 목록을 삭제하였습니다.</string>
      <string name="upload_result_del_message_fail">업로드 대기 목록 삭제를 실패하였습니다.</string>


      <string name="title_activity_file_upload">FileUploadActivity</string>
      <string name="navigation_drawer_open">Open navigation drawer</string>
      <string name="navigation_drawer_close">Close navigation drawer</string>
  -->
    <string name="nav_header_subtitle">android@twogoms.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tgsnavi_home">TGSNaviHomeActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>