<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TGSLoginActivity">

    <ImageView
        android:id="@+id/tgs_image_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo2"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="35dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/tgs_text_login_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/login_id_title"
            android:textSize="13sp"
            android:textColor="@color/login_text"/>
        <EditText
            android:id="@+id/tgs_edit_login_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp"
            android:theme="@style/EditTextStyle"
            android:inputType="textNoSuggestions"
            android:textColor="@color/login_input_text"
            android:textSize="16sp"
            android:background="@drawable/round_rect_blue_gray"/>
        <TextView
            android:id="@+id/tgs_text_login_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:includeFontPadding="false"
            android:text="@string/login_pw_title"
            android:textSize="13sp"
            android:textColor="@color/login_text"/>
        <EditText
            android:id="@+id/tgs_edit_login_pw"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp"
            android:theme="@style/EditTextStyle"
            android:inputType="textPassword"
            android:textColor="@color/login_input_text"
            android:textSize="16sp"
            android:background="@drawable/round_rect_blue_gray"/>

        <CheckBox
            android:id="@+id/tgs_checkbox_login_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_checkbox_green"
            android:layout_marginTop="22dp"
            android:paddingLeft="10dp"
            android:includeFontPadding="false"
            android:text="@string/login_check_save"
            android:textSize="13sp"
            android:textColor="@color/login_text"/>

        <Button
            android:id="@+id/tgs_button_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:text="@string/login_button"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@drawable/selector_button_blue_none"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tgs_layout_login_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/tgs_text_login_find_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/login_find_id"
            android:textSize="13sp"
            android:textColor="@color/login_text"/>
        <View
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/login_line_text"/>
        <TextView
            android:id="@+id/tgs_text_login_find_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/login_find_pw"
            android:textSize="13sp"
            android:textColor="@color/login_text"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>