<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:background="@drawable/hround_rect_white_none_3">
        <TextView
            android:id="@+id/tgs_textview_otp_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/otp_dialog_title"
            android:textSize="17dp"
            android:textColor="@color/tgsfw_otp_dialog_title_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/tgs_textview_otp_dialog_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/otp_dialog_msg_guide"
            android:textSize="13sp"
            android:textColor="@color/tgsfw_otp_dialog_guide_text"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tgs_textview_otp_dialog_title"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <ImageButton
            android:id="@+id/tgs_button_otp_dialog_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_close1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <LinearLayout
            android:id="@+id/tgs_layout_otp_dialog_number"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tgs_textview_otp_dialog_guide"
            android:background="@drawable/round_rect_gray_none">
            <EditText
                android:id="@+id/tgs_edittext_otp_dialog_num1"
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:hint="0"
                android:text=""
                android:textSize="24sp"
                android:textColor="@color/tgsfw_otp_dialog_number_text"
                android:background="@drawable/round_rect_white_gray"/>
            <EditText
                android:id="@+id/tgs_edittext_otp_dialog_num2"
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:layout_marginLeft="15dp"
                android:hint="0"
                android:text=""
                android:textSize="24sp"
                android:textColor="@color/tgsfw_otp_dialog_number_text"
                android:background="@drawable/round_rect_white_gray"/>
            <EditText
                android:id="@+id/tgs_edittext_otp_dialog_num3"
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:layout_marginLeft="15dp"
                android:hint="0"
                android:text=""
                android:textSize="24sp"
                android:textColor="@color/tgsfw_otp_dialog_number_text"
                android:background="@drawable/round_rect_white_gray"/>
            <EditText
                android:id="@+id/tgs_edittext_otp_dialog_num4"
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:layout_marginLeft="15dp"
                android:hint="0"
                android:text=""
                android:textSize="24sp"
                android:textColor="@color/tgsfw_otp_dialog_number_text"
                android:background="@drawable/round_rect_white_gray"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tgs_layout_otp_dialog_limit_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@id/tgs_layout_otp_dialog_number"
            app:layout_constraintRight_toRightOf="parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_time1"/>
            <TextView
                android:id="@+id/tgs_textview_otp_dialog_limit_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/otp_dialog_limit_time"/>
        </LinearLayout>
        
        <Button
            android:id="@+id/tgs_button_otp_dialog_ok"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/dialog_button_ok"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:background="@drawable/round_rect_blue_none"
            android:layout_marginTop="23dp"
            app:layout_constraintTop_toBottomOf="@id/tgs_layout_otp_dialog_limit_time"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>